deploy: 3664a4542a9ae21addbfd861b1ac57e95d8b208c

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Virus Simulator</title>
+  <title>Virus Simulator by Pascal Kraft</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
   
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-161411702-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
